[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
